@@ -42,11 +42,11 @@ IF139A.CBL     30   30    0       0       0 OK
 IF140A.CBL     13   13    0       0       0 OK
 IF141A.CBL     16   16    0       0       0 OK
 IF142A.CBL      2    2    0       0       0 OK
-IF401M.CBL      1    1    0       0       0 OK
+IF401M.CBL      0    0    0       0       0 OK
 IF402M.CBL      1    1    0       0       0 OK
-IF403M.CBL      1    1    0       0       0 OK
+IF403M.CBL      0    0    0       0       0 OK
 --------    ----- ---- ---- ------- -------
-Total         735  735    0       0       0
+Total         733  733    0       0       0
 
 Number of programs:    45
 Successfully executed: 45
