@@ -10,11 +10,11 @@ SG201A.CBL     79   79    0       0       0 OK
 SG202A.CBL      5    5    0       0       0 OK
 SG203A.CBL     18   18    0       0       0 OK
 SG204A.CBL     15   15    0       0       0 OK
-SG302M.CBL      1    1    0       0       0 OK
-SG303M.CBL      1    1    0       0       0 OK
-SG401M.CBL      1    1    0       0       0 OK
+SG302M.CBL      0    0    0       0       0 OK
+SG303M.CBL      0    0    0       0       0 OK
+SG401M.CBL      0    0    0       0       0 OK
 --------    ----- ---- ---- ------- -------
-Total         313  313    0       0       0
+Total         310  310    0       0       0
 
 Number of programs:    13
 Successfully executed: 13
