@@ -1,16 +1,16 @@
 ------ Directory Information -------   --- Total Tests Information ---
 Module Programs Executed Error Crash   Pass Fail Deleted Inspect Total
 ------ -------- -------- ----- -----  ----- ---- ------- ------- -----
-NC           95       95     0     0   4371    0       4      26  4401
-SM           17       17     0     0    293    0       2       1   296
+NC           95       95     0     0   4370    0       4      26  4400
+SM           17       17     0     0    291    0       2       1   294
 IC           25       25     0     0    247    0       4       0   251
-SQ           85       85     0     0    521    0       0      89   610
-RL           35       35     0     0   1830    0       5       0  1835
-IX           42       42     0     0    510    0       1       0   511
+SQ           85       85     0     0    520    0       0      89   609
+RL           35       35     0     0   1829    0       5       0  1834
+IX           42       42     0     0    509    0       1       0   510
 ST           40       40     0     0    289    0       0       0   289
-SG           13       13     0     0    313    0       0       0   313
+SG           13       13     0     0    310    0       0       0   310
 OB            7        7     0     0     34    0       0       0    34
-IF           45       45     0     0    735    0       0       0   735
+IF           45       45     0     0    733    0       0       0   733
 DB           16       16     0     0    405    0       4      27   436
 ------ -------- -------- ----- -----  ----- ---- ------- ------- -----
-Total       420      420     0     0   9548    0      20     143  9711
+Total       420      420     0     0   9537    0      20     143  9700
